--- a/assets/styles/p2/p2-quote.scss
+++ b/assets/styles/p2/p2-quote.scss
@@ -93,6 +93,10 @@
   width: 100%;
   position: relative;
   background: $ora-grey;
+
+  &.--generic {
+    background: $ora-darkgrey;
+  }
 }
 
 .ora-quote-blurb-content {
