--- a/src/templates/toyota.pug
+++ b/src/templates/toyota.pug
@@ -54,9 +54,9 @@ html
       // Hero Section ----------------------------------------:
       .ora-dream-hero
         .ora-dream-hero-content
-          .ora-dream-hero-bigtext
+          .ora-dream-hero-bigtext.--toyota
           .ora-dream-hero-content-sub
-            .ora-dream-hero-image
+            .ora-dream-hero-image.--toyota
             .ora-dream-hero-textbox
               h3
                 |get started with <br class="ora-br-laptop">a <em>free quote</em> on parts, accessories or custom builds
@@ -80,10 +80,9 @@ html
       .ora-split
         .ora-split-left
           p
-            |Looking for a performance or style upgrade? Always wanted to take your Jeep off road but not sure where to start? Let us take care of all your off roading and customization needs. Go wherever the road takes you, and turn heads on the way in a custom 4x4 vehicle from Off Road Addiction.
+            |Looking for a performance or style upgrade? Always wanted to take your truck off road but not sure where to start? Let us take care of all your  customization needs. Go wherever the road takes you, and turn heads on the way in a custom 4x4 vehicle from Off Road Addiction.
           p
-            |We have a huge selection of aftermarket parts, and Jeep accessories for off road enthusiasts at our superstore location in St. Thomas, ON. Not sure what you need? Our experts are always here to help! We also install everything we sell - our ministry licensed technicians can make your dream Jeep a reality.
-
+            |We have a huge selection of aftermarket parts, and accessories for truck enthusiasts at our superstore location in St. Thomas, ON. Not sure what you need? Our experts are always here to help! We also install everything we sell - our ministry licensed technicians can make your dream Toyota a reality.
           span.--bigtext
             |Get in touch today so we can start planning your build!
         .ora-split-right
@@ -114,11 +113,11 @@ html
             |Start planning your <br class="ora-br-phone"><b>CUSTOM BUILD</b>
         .ora-builds-tier
           .ora-builds-tier-left
-            .ora-builds-image.--one
+            .ora-builds-image.--one.--toyota
           .ora-builds-tier-right
             .ora-builds-tier-info
               span.ora-tier-subtitle.u-uppercase.u-phone-bottom-padding
-                |JEEP 101
+                |TOYOTA 101
               span.ora-tier-title
                 |JUST A TASTE
               span.--bigtext.u-seventy
@@ -140,7 +139,7 @@ html
           .ora-builds-tier-left
             .ora-builds-tier-info.--left
               span.ora-tier-subtitle.u-uppercase.u-phone-bottom-padding
-                |JEEP 201
+                |TOYOTA 201
               span.ora-tier-title
                 |NO TURNING BACK
               span.--bigtext.u-seventy
@@ -167,14 +166,14 @@ html
                   span
                     |Rock Sliders
           .ora-builds-tier-right
-            .ora-builds-image.--two
+            .ora-builds-image.--two.--toyota
         .ora-builds-tier
           .ora-builds-tier-left
-            .ora-builds-image.--three
+            .ora-builds-image.--three.--toyota
           .ora-builds-tier-right
             .ora-builds-tier-info
               span.ora-tier-subtitle.u-uppercase.u-phone-bottom-padding
-                |JEEP 301
+                |TOYOTA 301
               span.ora-tier-title
                 |FULLY ADDICTED
               span.--bigtext
@@ -231,12 +230,12 @@ html
                 img.ora-review-star(src="../../assets/images/icon-star.svg" alt="Small green star")
 
             .ora-review-box
-              h4.u-main-font.u-bold
-                |JK LIFT KIT &amp; SHOCKS
+              h4.u-main-font.u-bold.u-uppercase
+                |an excellent place to do business
               p
-                |I had a Teraflex 2.5&quot; coil lift kit with Fox 2.0 Evolution shocks, and I honestly could not be happier with the service and the actual kit and shocks have far exceeded my expectations!
+                |Ryan and his team are professional in the service they provide and they stand behind their product every time. If you want to learn about the best product for your application they will take the time to educate you and point you in the right direction.
               span.ora-review-box-author
-                |Jeff H.
+                |Brent K.
               .ora-review-stars
                 img.ora-review-star(src="../../assets/images/icon-star.svg" alt="Small green star")
                 img.ora-review-star(src="../../assets/images/icon-star.svg" alt="Small green star")
@@ -244,12 +243,12 @@ html
                 img.ora-review-star(src="../../assets/images/icon-star.svg" alt="Small green star")
                 img.ora-review-star(src="../../assets/images/icon-star.svg" alt="Small green star")
             .ora-review-box
-              h4.u-main-font.u-bold
-                |LIFTS, WHEELS &amp; TIRES
+              h4.u-main-font.u-bold.u-uppercase
+                |experts in what they do
               p
-                |I love my truck and what you have done to it. If anyone wants to lift their truck, I’ll recommend they go to you, Off Road Addiction.
+                |Having the entire vehicle stand out and sound great really gets people looking and taking notice. Well worth the investment!
               span.ora-review-box-author
-                |Gerhard M.
+                |Derek A.
               .ora-review-stars
                 img.ora-review-star(src="../../assets/images/icon-star.svg" alt="Small green star")
                 img.ora-review-star(src="../../assets/images/icon-star.svg" alt="Small green star")
@@ -259,7 +258,7 @@ html
       // Quote Section ----------------------------------------:
       .ora-quote(id="ora-request-form")
         .ora-quote-content
-          .ora-quote-content-left
+          .ora-quote-content-left.--toyota
           .ora-quote-content-right
             span.ora-quote-pretitle.u-darkgrey
               |GET YOUR
@@ -279,7 +278,7 @@ html
       // Quote Blurb Section ----------------------------------------:
       .ora-quote-blurb
         .ora-quote-blurb-content
-          .ora-quote-blurb-left
+          .ora-quote-blurb-left.--toyota
           .ora-quote-blurb-right
             p
               |We only choose products that are tough enough to use on our own Jeeps - all backed by our quality in-house installations and service guarantee.
@@ -288,11 +287,11 @@ html
       // Banner Section ----------------------------------------:
       .ora-banner
         .ora-banner-bg-strip
-          .ora-banner-bg-strip-item.--liftkits
-          .ora-banner-bg-strip-item.--flare
-          .ora-banner-bg-strip-item.--recovery
-          .ora-banner-bg-strip-item.--tire
-          .ora-banner-bg-strip-item.--tires
+          .ora-banner-bg-strip-item.--liftkits.--toyota
+          .ora-banner-bg-strip-item.--flare.--toyota
+          .ora-banner-bg-strip-item.--recovery.--toyota
+          .ora-banner-bg-strip-item.--tire.--toyota
+          .ora-banner-bg-strip-item.--tires.--toyota
         .ora-banner-fg-strip
           .ora-banner-fg-green
           .ora-banner-fg-words
