--- a/assets/styles/p2/ora-dream-hero.scss
+++ b/assets/styles/p2/ora-dream-hero.scss
@@ -228,6 +228,7 @@
 
     &.--generic {
       background-image: url('../images/p2/generic/hero-truck-cutout.png');
+      margin-right: 25px;
     }
   }
 
