--- a/src/templates/generic.pug
+++ b/src/templates/generic.pug
@@ -110,7 +110,33 @@ html
       .ora-builds
         .ora-builds-header
           h6.u-main-font.u-kustom-text
-            |Choose<br class="ora-br-phone"><b>YOUR RIDE</b>
+            |Choose <br class="ora-br-phone"><b>YOUR RIDE</b>
+        .ora-generic-selector
+          a.ora-generic-card(href="#" title="todo")
+            .ora-generic-card-image.--jeep
+            .ora-generic-card-label
+              p
+                |JEEP
+          a.ora-generic-card(href="#" title="todo")
+            .ora-generic-card-image.--ram
+            .ora-generic-card-label
+              p
+                |RAM
+          a.ora-generic-card(href="#" title="todo")
+            .ora-generic-card-image.--chevy
+            .ora-generic-card-label
+              p
+                |CHEVY/GM
+          a.ora-generic-card(href="#" title="todo")
+            .ora-generic-card-image.--toyota
+            .ora-generic-card-label
+              p
+                |TOYOTA
+          a.ora-generic-card(href="#" title="todo")
+            .ora-generic-card-image.--ford
+            .ora-generic-card-label
+              p
+                |FORD
       // Quote Blurb Section ----------------------------------------:
       .ora-quote-blurb.--generic
         .ora-quote-blurb-content
