--- a/src/templates/ford.pug
+++ b/src/templates/ford.pug
@@ -126,7 +126,7 @@ html
                 li
                   .ora-checkbox
                   span
-                    |1.75” - 2.5” Lift Kit
+                    |Leveling Kit
                 li
                   .ora-checkbox
                   span
@@ -148,23 +148,19 @@ html
                 li
                   .ora-checkbox
                   span
-                    |3”- 4” Suspension Lift Kit
+                    |3”- 4” Lift Kit
                 li
                   .ora-checkbox
                   span
-                    |New Wheels
+                    |New Wheels with More Aggressive Stance
                 li
                   .ora-checkbox
                   span
-                    |Bigger Tires
+                    |Side Steps
                 li
                   .ora-checkbox
                   span
-                    |Front &amp; Rear Bumpers
-                li
-                  .ora-checkbox
-                  span
-                    |Rock Sliders
+                    |Fender Flares
           .ora-builds-tier-right
             .ora-builds-image.--two.--ford
         .ora-builds-tier
@@ -182,11 +178,7 @@ html
                 li
                   .ora-checkbox
                   span
-                    |4”- 6” Suspension Lift Kit
-                li
-                  .ora-checkbox
-                  span
-                    |New Wheels
+                    |6” Lift & Up
                 li
                   .ora-checkbox
                   span
@@ -194,19 +186,19 @@ html
                 li
                   .ora-checkbox
                   span
-                    |Light Bars
-                li
-                  .ora-checkbox
-                  span
-                    |Fender Flares
-                li
-                  .ora-checkbox
-                  span
-                    |Bumpers &amp; Tire Carrier
+                    |Front & Rear Bumpers
                 li
                   .ora-checkbox
                   span
                     |Winch
+                li
+                  .ora-checkbox
+                  span
+                    |Performance Exhaust
+                li
+                  .ora-checkbox
+                  span
+                    |LED Light Bar & Auxiliary Lighting
       // Review Section ----------------------------------------:
       .ora-review
         .ora-review-left
@@ -281,7 +273,7 @@ html
           .ora-quote-blurb-left.--ford
           .ora-quote-blurb-right
             p
-              |We only choose products that are tough enough to use on our own Jeeps - all backed by our quality in-house installations and service guarantee.
+              |We only choose products that are tough enough to use on our own trucks - all backed by our quality in-house installations and service guarantee.
             p
               |Long drive to our state-of-the-art facility? Build your dream truck from the comfort of home without adding extra kilometers. If you live in Ontario, we’ll send our custom trailer to you. <b>Don’t wait, get a free quote today!</b>
       // Banner Section ----------------------------------------:
