--- a/src/templates/generic.pug
+++ b/src/templates/generic.pug
@@ -61,10 +61,6 @@ html
               h3
                 |get started with <br class="ora-br-laptop">a <em>free quote</em> on parts, accessories or custom builds
               .ora-btn-box
-                a.ora-btn.--dark.--generic(href="#quote" title="Book a free consultation")
-                  span
-                    |GET YOUR FREE QUOTE&nbsp;
-                  i.fas.fa-angle-right
                 a.ora-btn.--lighter.--generic(href="#quote" title="Book a free consultation")
                   span
                     |GET YOUR FREE QUOTE&nbsp;
@@ -143,7 +139,7 @@ html
           .ora-quote-blurb-left.--generic
           .ora-quote-blurb-right
             p
-              |We only choose products that are tough enough to use on our own Jeeps - all backed by our quality in-house installations and service guarantee.
+              |We only choose products that are tough enough to use on our own trucks - all backed by our quality in-house installations and service guarantee.
             p
               |Long drive to our state-of-the-art facility? Build your dream truck from the comfort of home without adding extra kilometers. If you live in Ontario, we’ll send our custom trailer to you. <b>Don’t wait, get a free quote today!</b>
       // Quote Section ----------------------------------------:
