--- a/src/templates/index.pug
+++ b/src/templates/index.pug
@@ -127,7 +127,7 @@ html
                 li
                   .ora-checkbox
                   span
-                    |1.75” - 2.5” Lift Kit
+                    |Leveling Kit
                 li
                   .ora-checkbox
                   span
@@ -149,23 +149,19 @@ html
                 li
                   .ora-checkbox
                   span
-                    |3”- 4” Suspension Lift Kit
+                    |3”- 4” Lift Kit
                 li
                   .ora-checkbox
                   span
-                    |New Wheels
+                    |New Wheels with More Aggressive Stance
                 li
                   .ora-checkbox
                   span
-                    |Bigger Tires
+                    |Side Steps
                 li
                   .ora-checkbox
                   span
-                    |Front &amp; Rear Bumpers
-                li
-                  .ora-checkbox
-                  span
-                    |Rock Sliders
+                    |Fender Flares
           .ora-builds-tier-right
             .ora-builds-image.--two
         .ora-builds-tier
@@ -183,11 +179,7 @@ html
                 li
                   .ora-checkbox
                   span
-                    |4”- 6” Suspension Lift Kit
-                li
-                  .ora-checkbox
-                  span
-                    |New Wheels
+                    |6” Lift & Up
                 li
                   .ora-checkbox
                   span
@@ -195,19 +187,19 @@ html
                 li
                   .ora-checkbox
                   span
-                    |Light Bars
-                li
-                  .ora-checkbox
-                  span
-                    |Fender Flares
-                li
-                  .ora-checkbox
-                  span
-                    |Bumpers &amp; Tire Carrier
+                    |Front & Rear Bumpers
                 li
                   .ora-checkbox
                   span
                     |Winch
+                li
+                  .ora-checkbox
+                  span
+                    |Performance Exhaust
+                li
+                  .ora-checkbox
+                  span
+                    |LED Light Bar & Auxiliary Lighting
       // Review Section ----------------------------------------:
       .ora-review
         .ora-review-left
