removed header and added padding - Changed how login works - Added new flags

--- a/assets/styles/scaffolding.scss
+++ b/assets/styles/scaffolding.scss
@@ -3,6 +3,9 @@
 /-------------------------------------*/
 
 // Wrapper Classes
+body {
+  padding-top: 150px;
+}
 
 .mdev-main-wrapper {
   width: 95%;
